--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,3 @@
-[package]
-name = "harvester"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-wgpu = "24"
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
-bytemuck = "1.21"
-sha2 = "0.10"
-hex = "0.4"
-chrono = "0.4"
+[workspace]
+members = ["wgpu-sha256-miner", "btccore-bridge", "harvester-bin"]
+resolver = "2"
