--- a/harvester-bin/Cargo.toml
+++ b/harvester-bin/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 wgpu-sha256-miner = { path = "../wgpu-sha256-miner" }
 btccore-bridge = { path = "../btccore-bridge" }
+
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+anyhow = "1.0"
 chrono = "0.4"
 hex = "0.4"
