--- a/wgpu-sha256-miner/Cargo.toml
+++ b/wgpu-sha256-miner/Cargo.toml
@@ -9,3 +9,6 @@ bytemuck = "1.21"
 sha2 = "0.10"
 hex = "0.4"
 anyhow = "1.0"
+
+[dev-dependencies]
+tokio = { version = "1.44", features = ["full"] }
