--- a/btccore-bridge/Cargo.toml
+++ b/btccore-bridge/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tokio = { version = "1.44", features = ["full"] }
 zmq = "0.10"
 anyhow = "1.0"
 url = "2.5"
