--- a/btccore-bridge/Cargo.toml
+++ b/btccore-bridge/Cargo.toml
@@ -9,4 +9,5 @@ async-trait = "0.1"
 async_zmq = "0.4"
 anyhow = "1.0"
 url = "2.5"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
